--- a/cachecloud-open-web/src/main/swap/local.properties
+++ b/cachecloud-open-web/src/main/swap/local.properties
@@ -1,11 +1,11 @@
-cachecloud.db.url = jdbc:mysql://127.0.0.1:3306/cache-cloud
-cachecloud.db.user = cachecloud
-cachecloud.db.password = 
+cachecloud.db.url = jdbc:mysql://127.0.0.1:3306/cache_cloud
+cachecloud.db.user = root
+cachecloud.db.password = 12345
 cachecloud.maxPoolSize = 20
 
 isClustered = true
 isDebug = true
 spring-file = classpath:spring/spring-local.xml
 log_base = /opt/cachecloud-web/logs
-web.port = 9999
+web.port = 52000
 log.level = INFO
