--- a/cachecloud-open-web/src/main/swap/local.properties
+++ b/cachecloud-open-web/src/main/swap/local.properties
@@ -1,6 +1,6 @@
-cachecloud.db.url = jdbc:mysql://127.0.0.1:3306/cache_cloud
-cachecloud.db.user = root
-cachecloud.db.password = 12345
+cachecloud.db.url = jdbc:mysql://123.56.113.51:3306/cache_cloud
+cachecloud.db.user = jdxk
+cachecloud.db.password = jdxk~!@
 cachecloud.maxPoolSize = 20
 
 isClustered = true
