--- a/cachecloud-open-web/pom.xml
+++ b/cachecloud-open-web/pom.xml
@@ -16,9 +16,6 @@
     <properties>
         <spring-boot.version>1.3.1.RELEASE</spring-boot.version>
         <tomcat.version>8.0.28</tomcat.version>
-        <cachecloud-open-client-basic>1.0-SNAPSHOT</cachecloud-open-client-basic>
-        <cachecloud-jedis>1.0-SNAPSHOT</cachecloud-jedis>
-        <cachecloud-open-common.version>1.0-SNAPSHOT</cachecloud-open-common.version>
     </properties>
     <dependencies>
         <dependency>
@@ -185,23 +182,21 @@
             <artifactId>fastjson</artifactId>
         </dependency>
 
-		<dependency>
-			<groupId>com.sohu.tv</groupId>
-			<artifactId>cachecloud-open-client-basic</artifactId>
-			<version>${cachecloud-open-client-basic}</version>
-		</dependency>
-	
-		<dependency>
-			<groupId>com.sohu.tv</groupId>
-			<artifactId>cachecloud-jedis</artifactId>
-			<version>${cachecloud-jedis}</version>
-		</dependency>
-		
+        <dependency>
+            <groupId>com.sohu.tv</groupId>
+            <artifactId>cachecloud-open-jedis-stat</artifactId>
+        </dependency>
+
 		<dependency>
 			<groupId>com.sohu.tv</groupId>
 			<artifactId>cachecloud-open-common</artifactId>
-			<version>${cachecloud-open-common.version}</version>
 		</dependency>
+
+        <dependency>
+            <groupId>com.axhs</groupId>
+            <artifactId>tool-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
