--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>cachecloud-open-web</module>
-        <module>cachecloud-open-client</module>
         <module>cachecloud-open-common</module>
+        <module>cachecloud-open-client</module>
     </modules>
 
     <properties>
@@ -113,12 +113,6 @@
             </dependency>
 
             <dependency>
-                <groupId>redis.clients</groupId>
-                <artifactId>jedis</artifactId>
-                <version>${jedis.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
@@ -194,7 +188,25 @@
 			  <artifactId>fastjson</artifactId>
 			  <version>${fastjson.version}</version>
 			</dependency>
-            
+
+            <dependency>
+                <groupId>com.sohu.tv</groupId>
+                <artifactId>cachecloud-open-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.sohu.tv</groupId>
+                <artifactId>cachecloud-open-jedis-stat</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.axhs</groupId>
+                <artifactId>tool-redis</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -250,8 +262,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.plugin}</version>
                     <configuration>
-                        <source>${maven.compiler.target}</source>
-                        <target>${maven.compiler.target}</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
 
