--- a/cachecloud-open-web/pom.xml
+++ b/cachecloud-open-web/pom.xml
@@ -195,7 +195,10 @@
         <dependency>
             <groupId>com.axhs</groupId>
             <artifactId>tool-redis</artifactId>
-            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sohu.tv</groupId>
+            <artifactId>cachecloud-jedis</artifactId>
         </dependency>
 
     </dependencies>
